apps/media/jackett/jackett-middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jackett-headers
  namespace: media
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Prefix: "/jackett"
