apps/media/jackett/jackett-middleware-redirect--not-needed.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jackett-redirect
  namespace: media
spec:
  redirectRegex:
    regex: ^/*
    replacement: /jackett/$1
    permanent: false
