apps/media/jackett/jackett-middleware-strip--not-needed.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jackett-strip
  namespace: media
spec:
  stripPrefix:
    prefixes:
      - /jackett
