apps/media/jackett/jackett-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: jackett
          #image: lscr.io/linuxserver/jackett:latest
          image: lscr.io/linuxserver/jackett:0.24.2748 # {"$imagepolicy": "flux-system:jackett"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9117
              name: http
          volumeMounts:
            - name: jackett-config
              mountPath: /config
          readinessProbe:
            tcpSocket:
              port: 9117
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 9117
            initialDelaySeconds: 90
            periodSeconds: 30
      volumes:
        - name: jackett-config
          persistentVolumeClaim:
            claimName: jackett-config
