apps/media/jackett/jackett-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jackett
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jackett.catacumbas69.com`)
#    - match: PathPrefix(`/jackett`)
      kind: Rule
      services:
        - name: jackett
          port: 9117
#      middlewares:
#        - name: jackett-headers
